# m2-fake-sphere

./: .gitignore  CLAUDE.md  README.md  choice_decode.py  data_saver.py  dummy_db.sql  logo.txt  main.py  requirements.txt  schema_analyzer.py
agent/: ai_agent_precision.py
assets/: fake-sphere-flows.drawio
bkp/: bkp_main.py  data_generator.py  db_connector.py
config/: logging_config.py
data/: __init__.py  config_matcher.py  data_generator.py  datatype_enum.py  faker_matcher.py
data_matcher/: matcher.py
faker_meta/: func_retriever.py
interfaces/api_server/: __init__.py  main.py
interfaces/api_server/routes/: __init__.py  auth.py  configurations.py  metrics.py  simulations.py
interfaces/api_server/websockets/: __init__.py  simulation_events.py
interfaces/cli/: __init__.py  main.py
interfaces/cli/screens/: __init__.py  configuration.py  dashboard.py  logs.py  metrics.py  monitoring.py
interfaces/webapp/: package.json
interfaces/webapp/public/: index.html  manifest.json
interfaces/webapp/src/: App.jsx
interfaces/webapp/src/components/Common/: Layout.jsx
interfaces/webapp/src/pages/: History.jsx  Home.jsx  Settings.jsx  Simulations.jsx
interfaces/webapp/src/services/: api.js  websocket.js
interfaces/webapp/src/stores/: authStore.js
interfaces/webapp/src/styles/: index.css
llm/: control_index.json  rag_faker_retrieval.py  scraper.py
m2_fake_sphere/: pyproject.toml
m2_fake_sphere/src/m2_fake_sphere/api_simulation/: __init__.py  metrics_collector.py  request_generator.py  simulation_engine.py  swagger_parser.py
m2_fake_sphere/src/m2_fake_sphere/db_postgres/: README.md  configuration_manager.py  database_connection_manager.py  json_structure_builder.py  main.py  relationship_mapper.py  schema_inspector.py
m2_fake_sphere/tests/: example.py  sample_config.json
m2_fake_sphere/tests/schemas/: users.sql
test/fake_csv/: test_config.json
