[project]
name = "m2-fake-sphere"
version = "0.1.0"
description = ""
authors = [
    {name = "johnmartinez",email = "jmartinez5120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "m2_fake_sphere", from = "src"}]
python = "^3.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
