[project]
name = "m2-fake-sphere"
version = "0.1.0"
description = ""
authors = [
    {name = "johnmartinez",email = "jmartinez5120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "faker (>=37.1.0,<38.0.0)"
]

[tool.poetry]
packages = [{include = "m2_fake_sphere", from = "src"}]



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
