[project]
name = "m2-fake-sphere"
version = "0.1.0"
description = ""
authors = [
    {name = "johnmartinez",email = "jmartinez5120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "requests (>=2.31.0,<3.0.0)",
    "jsonschema (>=4.21.0,<5.0.0)",
    "textual (>=0.88.0,<1.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "flask-socketio (>=5.3.0,<6.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "python-socketio[client] (>=5.11.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "m2_fake_sphere", from = "src"}]



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
psycopg2-binary = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
